    - few bugs in cluster map redraw algorithm were fixed
    - the following translations were added:

      Latin, Hebrew, Javanese, Indonesian (Bahasa Indonesia)

    - the following translations were updated:

      Portuguese (BR), Yiddish, Hungarian, Spanish (ES), Dutch
    
    - installer has been enhanced in the following ways:
      + installer supports full, micro edition and custom installation
      + component selections are remembered between installations
      + interfaces can be selected individually
      + shortcut icons can be selected individually
      + all selections can be done through command line switches
        during silent installations using the /S switch:
            * /FULL .............. install full installation
            * /MICRO ............. install micro edition (no GUI, no help, no icons)
            * /ICONS ............. install/remove all shortcut icons
            * /BOOT .............. install/remove boot time component
            * /CONSOLE ........... install/remove console component
            * /GUI ............... install/remove GUI component
            * /HELP .............. install/remove documentation
            * /SHELLEXTENSION .... install/remove Explorer context menu handler
            * /STARTMENUICON ..... install/remove start menu icon
            * /DESKTOPICON ....... install/remove desktop icon
            * /QUICKLAUNCHICON ... install/remove quick launch icon
    - one little bug causing log file path truncation in GUI was fixed
    - one bug causing infinite loops in volume optimization was fixed
    - progress percentage calculation was improved
    - Developers: winx_create_mutex, winx_open_mutex, winx_release_mutex,
      winx_destroy_mutex functions added to zenwinx library

    beta3:
    - volume optimization reimplemented
    - quick volume optimization implemented
    - the cluster map now indicates unused map blocks with gray color